envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 6000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          upgrade_configs:
            - upgrade_type: websocket
          route_config:
            name: local_route
            virtual_hosts:
            - name: surface
              domains: ['*']
              routes:
              - match:
                  prefix: /hooks/stripe
                route:
                  cluster: s-hooks-stripe
                  prefix_rewrite: /

              - match:
                  prefix: /graphql
                route:
                  cluster: s-graph

              - match:
                  prefix: /
                route:
                  cluster: s-surface
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: s-surface
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    http_protocol_options: {}
    load_assignment:
      cluster_name: service.surface
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: surface
                  port_value: 3000

  - name: s-graph
    connect_timeout: 25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: service.graph
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: graph
                  port_value: 6000

  - name: s-hooks-stripe
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    load_assignment:
      cluster_name: service.hooks.stripe
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: api
                  port_value: 6000
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
